--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
 	<title>Trivia</title>
 </head>
 <body>
+
+<div id="show-time"></div>
+
+
 	
 </body>
 
 
 
-	<script src="./assets/js/apps.js"></script>
+	<script src="./assets/js/app.js"></script>
 
 
 </html>
