--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="icon" href="assets/images/favicon.ico" type="image/x-icon"/>
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Bungee">
 	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="./assets/css/reset.css">	
@@ -9,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
-	<title>Trivia</title>
+	<title>TRIVIA</title>
 </head>
 <body>
 
